code/deployment/kubernetes-laravel.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app-v3
  namespace: dad-group-26
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app-v3
  template:
    metadata:
      labels:
        app: laravel-app-v3
    spec:
      priorityClassName: high-priority
      containers:
        - name: api
          image: registry-172.22.21.115.sslip.io/dad-group-26/api:v3.0.2
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  name: laravel-app-v3
  namespace: dad-group-26
spec:
  ports:
    - port: 80
  selector:
    app: laravel-app-v3
