code/deployment/kubernetes-ws.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-server-v3
  namespace: dad-group-26
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-server-v3
  template:
    metadata:
      labels:
        app: websocket-server-v3
    spec:
      priorityClassName: low-priority
      containers:
        - name: web
          image: registry-172.22.21.115.sslip.io/dad-group-26/ws:v3.0.0
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: websocket-server-v3
  namespace: dad-group-26
spec:
  ports:
    - port: 3000
  selector:
    app: websocket-server-v3
